# api_receipt

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
alembic/versions/: c9ff14da3bf2_your_message_here.py
app/: errors.py  main.py
app/api/dependencies/: auth.py  user.py
app/api/routers/: auth.py  users.py
app/crud/: auth.py  log.py  sales_receipt.py  sales_receipt_products.py  user.py
app/models/: __init__.py  auth.py  log.py  payment.py  product.py  sales_receipt.py  sales_receipt_products.py  user.py
app/models/enums/: payment.py
app/schemas/: __init__.py  auth.py  sales_receipt.py  sales_receipt_products.py  user.py
app/services/: auth.py
tests/: conftest.py
tests/auth/: test_signup.py
